--- a/Homework4/assignment 4.Rmd
+++ b/Homework4/assignment 4.Rmd
@@ -77,3 +77,8 @@ plot(time_series, type = "l", ylab = title, col = "red")
 
 grid()
 ```
+
+# STL decomposition
+```{r, fig.width=10, fig.height=10}
+plot(stl(time_series, s.window = "periodic"))
+```
