Update plot to show original and transformed series

--- a/Homework4/assignment 4.Rmd
+++ b/Homework4/assignment 4.Rmd
@@ -101,5 +101,5 @@ grid()
 ```
 
 ### Notes:
-Looking at the plot of the original series, we can see that there is not so much variance in the date, 
+Looking at the plot of the original series and the transformed one, we can see that there is not so much variance in the date, 
 so we will not make the Box-Cox transformation.
