Fix forecast plot and add total set

--- a/Homework4/assignment 4.Rmd
+++ b/Homework4/assignment 4.Rmd
@@ -155,7 +155,7 @@ Unbiasedness | Wilcoxon     | not rejected   | `r wilcox.test(res_auto)$p.value`
 Stationarity | KPSS         | not rejected   | `r kpss.test(res_auto)$p.value`
 
 ## Forecast the last year
-```{r, echo=FALSE}
+```{r}
 fit_short <- Arima(train_set, model = fit_auto)
 
 fc <- forecast(fit_short, h = test_length)
@@ -164,8 +164,10 @@ accuracy(fc, test_set)
 ```
 
 
-```{r, echo=FALSE, fig.height=5, fig.width=10}
-plot(forecast(fit_short, h = test_length), ylab = title, xlab = "Time")
+```{r, fig.height=5, fig.width=10}
+plot(fc, ylab = title, xlab = "Time")
 
-lines(time_series, col = "red")
+total_set <- c(train_set, test_set)
+
+lines(total_set, col = "red")
 ```
