--- a/Homework4/assignment 4.Rmd
+++ b/Homework4/assignment 4.Rmd
@@ -332,3 +332,21 @@ dm.test(res, res_auto)
 Diebold-Mariano test (p-value = 0.1096) does not find the differences between forecasting errors of two ARIMAs significant. 
 The residuals of two models have the same properties. 
 Automatic model has smaller AICc, so we'll use the automatic model.
+
+# Comparing the residuals of the best ARIMA and the best ETS models:
+```{r fig.width=8, fig.height=8}
+res_ets <- residuals(fit_ets, type = "response")
+
+plot(res_auto, res_ets,
+     xlab = "Residuals, best ARIMA",
+     ylab = "Residuals, best ETS",
+     xlim = c(min(c(res_auto, res_ets), na.rm = TRUE),
+              max(c(res_auto, res_ets), na.rm = TRUE)),
+     ylim = c(min(c(res_auto, res_ets), na.rm = TRUE),
+              max(c(res_auto, res_ets), na.rm = TRUE)))
+
+lines(c(min(c(res_auto, res_ets),
+            na.rm = TRUE), max(c(res_auto, res_ets), na.rm = TRUE)),
+      c(min(c(res_auto, res_ets), na.rm = TRUE),
+        max(c(res_auto, res_ets), na.rm = TRUE)), col = "red")
+```
